<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="tracks_page_name">Spotify Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="artist">Artist</string>
    <string name="track">Track</string>
    <string name="album">Album</string>
    <string name="album_cover">Album Cover</string>
    <string name="title_activity_artist_tracks">Top Ten Tracks</string>
    <string name="track_start">0:00</string>
    <string name="track_end">0:30</string>
    <string name="title_activity_track_player">TrackPlayer</string>
    <string name="previous">Previous Track Button</string>
    <string name="play_pause_button">Play and Pause Button</string>
    <string name="next">Next Track Button</string>
</resources>
