<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.runningoutofbreadth.spotifystreamer.TrackPlayerFragment">

        <!-- layout block for track info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/player_artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/artist" />

            <TextView
                android:id="@+id/player_album_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/album" />

            <ImageView
                android:id="@+id/player_album_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxHeight="200dp"
                android:maxWidth="200dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/player_track_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/track" />
        </LinearLayout>

        <!-- layout block for "scrub" bar-->
        <SeekBar
            android:id="@+id/player_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" />

        <!-- layout block for start/end times-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_track_time_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:text="@string/track_start" />

            <TextView
                android:id="@+id/player_track_time_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:text="@string/track_end" />

        </LinearLayout>

        <!-- layout block for playback controls -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_track_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@android:drawable/ic_media_previous" />

            <ImageView
                android:id="@+id/player_play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/player_track_previous_button"
                android:layout_toRightOf="@+id/player_track_previous_button"
                android:padding="4dp"
                android:src="@android:drawable/ic_media_play" />

            <ImageView
                android:id="@+id/player_track_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/player_track_previous_button"
                android:layout_toRightOf="@+id/player_play_pause_button"
                android:padding="4dp"
                android:src="@android:drawable/ic_media_next" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>